# unity2urho

./: LICENSE  README.md
TextureExporterPlugin/: CMakeLists.txt  main.cpp
TextureExporterPlugin/DirectXTex/: CMakeLists.txt
UnityProject/Assets/: scene.unity
UnityProject/Assets/Editor/Urho/: Components.cs  Exporter.cs  ExporterMenuItem.cs  Resources.cs  Scene.cs  TextureExporter.cs
UnityProject/Assets/Materials/: bricks_1.sbsar  red.mat  urho3d.mat  white.mat
UnityProject/Assets/scene/: LightingData.asset  Lightmap-0_comp_light.exr
UnityProject/ProjectSettings/: ProjectSettings.asset
UrhoExample/: CMakeLists.txt
UrhoExample/cmake/: FindUrho3D.cmake
UrhoExample/data/Shaders/HLSL/: Unity.hlsl  UnityUtils.hlsl
UrhoExample/data/Techniques/: UnityDiff.xml  UnityDiffLightMap.xml  UnityDiffNormalPacked.xml  UnityDiffNormalPackedLightMap.xml
UrhoExample/scene/: scene.xml
UrhoExample/scene/Materials/: Sky.xml  bricks_1.xml  red.xml  urho3d.xml  white.xml
UrhoExample/scene/Models/: Capsule.mdl  Cube(1).mdl  Cube.mdl  Sphere(1).mdl  Sphere.mdl
UrhoExample/scene/Textures/: Lightmap-0_comp_light.dds  Lightmap-0_comp_light.xml  Sky_cube.xml  bricks_1_basecolor.dds  bricks_1_normal.dds  urho3d-logo.dds  urho3d-logo.xml
UrhoExample/src/: UrhoExample.cpp  UrhoExample.h
